force-app/main/default/objects/PhoneNumberList__c/PhoneNumberList__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>AvailblePhone</label>
</CustomObject>