force-app/main/default/objects/PhoneNumberList__c/fields/FlowId__c.field-meta.xml
<CustomField>
    <fullName>FlowId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FlowId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>