force-app/main/default/objects/PhoneNumberList__c/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PhoneNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>