force-app/main/default/objects/PhoneNumberList__c/fields/Text_Values__c.field-meta.xml
<CustomField>
    <fullName>Text_Values__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Text Values</label>
    <length>50</length>
    <type>Text</type>
</CustomField>